# InfluenceMaximization

./: .gitignore  CMakeLists.txt  Makefile  README.md  attitude_main.cpp  cim_main.cpp  difference_main.cpp  differencemain.cpp  dpalgorithm_main.cpp  experiments.py  heuristic_main.cpp  main.cpp  main_utils.h  run_influence.sh  run_tests.sh
InfluenceMaximization/: ApproximationSetting.hpp  BaselineGreedy.cpp  BaselineGreedy.hpp  BaselineGreedyTIM.cpp  BaselineGreedyTIM.hpp  DifferenceApproximator.cpp  DifferenceApproximator.hpp  Diffusion.hpp  EstimateNonTargets.cpp  EstimateNonTargets.hpp  FunctionEvaluators.cpp  FunctionEvaluators.hpp  GenerateGraphLabels.cpp  GenerateGraphLabels.hpp  Graph.cpp  Graph.hpp  HeuristicsExecuter.cpp  HeuristicsExecuter.hpp  IMTree.cpp  IMTree.hpp  LabelSetting.hpp  NormalizedInfluenceCalculator.cpp  Phase2.cpp  Phase2.hpp  TIMEvaluator.cpp  TIMEvaluator.hpp  TIMInfluenceCalculator.cpp  TIMInfluenceCalculator.hpp  TIMUtility.hpp  main.cpp
InfluenceMaximization.xcodeproj/: project.pbxproj
InfluenceMaximization.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
InfluenceMaximization.xcodeproj/xcuserdata/madhavanrp.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
InfluenceMaximization.xcodeproj/xcuserdata/madhavanrp.xcuserdatad/xcschemes/: InfluenceMaximization.xcscheme  jsonexperimenter.xcscheme  (+1 more)
InfluenceMaximization/Attitude/: AttitudeCalculator.cpp  AttitudeCalculator.hpp
InfluenceMaximization/CIM/: BaselineGreedy.cpp  BaselineGreedy.hpp  BaselineGreedyTIM.cpp  BaselineGreedyTIM.hpp  EstimateNonTargets.hpp  IMTree.cpp  IMTree.hpp  Phase2.cpp  Phase2.hpp
InfluenceMaximization/DPAlgorithm/: HeirarchicalDecomposition.cpp  HeirarchicalDecomposition.hpp
InfluenceMaximization/DifferenceAlgorithms/: ApproximationSetting.hpp  DifferenceApproximator.hpp  TIMEvaluator.cpp
InfluenceMaximization/Graph/: GenerateGraphLabels.cpp  Graph.cpp  Graph.hpp
InfluenceMaximization/Heuristics/: HeuristicsExecuter.cpp
InfluenceMaximization/IMResults/: IMResults.h
InfluenceMaximization/Models/: IMSeedSet.hpp
InfluenceMaximization/ModularKnapsack/: GreedyModularKnapsack.cpp  GreedyModularKnapsack.hpp  NormalizedInfluenceCalculator.hpp
InfluenceMaximization/SFMT/: test-std-M11213  test-std-M132049  test-std-M2281  test-std-M86243
InfluenceMaximization/TIM-Models/: TIMCoverage.cpp  TIMCoverage.hpp  TIMNormalizedCoverage.cpp  TIMNormalizedCoverage.hpp
SFMT/: test-std-M1279  test-std-M19937  test-std-M216091  test-std-M4253  test-std-M44497  test-std-M607
graphs/: graph_ic.inf  graph_ic.inf_0.8_labels.txt  test_graph.inf
tests/: ApproximationTests.cpp  BaselineGreedyTests.cpp  DifferenceTests.cpp  DiffusionTests.cpp  GraphTests.cpp  TIMCoverageTests.cpp  TIMEvaluatorTests.cpp  catchTest.cpp
